<resources>
    <string name="app_name">Phish</string>

    <!-- static text on screen -->
    <string name="welcome_message">Welcome!</string>
    <string name="login_message">Please log in or register</string>
    <string name="register_message">Please register for an account</string>
    <string name="login_success">Login Successful!</string>

    <!-- text fields -->
    <string name="username_prompt">Username</string>
    <string name="firstname_prompt">First Name</string>
    <string name="lastname_prompt">Last Name</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <!-- for easy login testing, Commit out two lines below when done -->
    <!--<string name="email_prompt_testing">joshua9@uw.edu</string>-->
    <!--<string name="password_prompt_testing">joshua</string>-->

    <string name="empty_field_prompt">Field cannot be left blank</string>
    <string name="missing_at_symbol_prompt">Must have at least one @ character</string>
    <string name="password_too_short_prompt">Password needs to be at least 6 characters</string>
    <string name="passwords_do_not_match_prompt">Passwords do not match</string>

    <string name="chat_text_hint">Write a message</string>

    <!--action options menu-->
    <string name="action_logout">Logout</string>

    <!-- navigation bar -->
    <string name="nav_home">Home</string>
    <string name="nav_blog_posts">Blog Posts</string>
    <string name="nav_set_lists">Set Lists</string>
    <string name="global_chat">Global Chat</string>

    <!-- buttons -->
    <string name="login_text">LOGIN</string>
    <string name="register_text">REGISTER</string>
    <string name="full_post_button_text">Full Post</string>
    <string name="full_setlist_button_text">Full Set List</string>
    <string name="success_logout_button">Logout</string>

    <!-- Keys -->
    <string name="user_info_key">user information</string>

    <!-- Sidebar / navigation -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phish App</string>
    <string name="nav_header_subtitle">TCSS 450 Labs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
