<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_blog_posts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_blog_posts" />
        <item
            android:id="@+id/nav_set_lists"
            android:icon="@drawable/ic_menu_set_lists"
            android:title="@string/nav_set_lists" />
        <item
            android:id="@+id/global_chat"
            android:icon="@drawable/ic_global_chat"
            android:title="@string/global_chat" />
    </group>

</menu>
